@@ -15,6 +15,9 @@
    - stevesk@cvs.openbsd.org 2001/12/10 16:45:04
      [sshd.c]
      possible fd leak on error; ok markus@
+   - markus@cvs.openbsd.org 2001/12/10 20:34:31
+     [ssh-keyscan.c]
+     check that server supports v1 for -t rsa1, report from wirth@dfki.de
 
 20011219
  - (stevesk) OpenBSD CVS sync X11 localhost display
@@ -7043,4 +7046,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1696 2001/12/21 01:44:28 djm Exp $
+$Id: ChangeLog,v 1.1697 2001/12/21 01:45:43 djm Exp $
